Some code tidy up and adding Radiance/Daysim configure and tools