@@ -1,516 +1,76 @@
-/**
- * *************************************************************************
- * jEPlus - EnergyPlus shell for parametric studies * Copyright (C) 2010 Yi Zhang <yizhanguk@googlemail.com> * * This program is free
- * software: you can redistribute it and/or modify * it under the terms of the GNU General Public License as published by * the Free
- * Software Foundation, either version 3 of the License, or * (at your option) any later version. * * This program is distributed in the
- * hope that it will be useful, * but WITHOUT ANY WARRANTY; without even the implied warranty of * MERCHANTABILITY or FITNESS FOR A
- * PARTICULAR PURPOSE. See the * GNU General Public License for more details. * * You should have received a copy of the GNU General Public
- * License * along with this program. If not, see <http://www.gnu.org/licenses/>. * *
- **************************************************************************
- */
+/***************************************************************************
+ *   jEPlus - EnergyPlus shell for parametric studies                      *
+ *   Copyright (C) 2010  Yi Zhang <yizhanguk@googlemail.com>               *
+ *                                                                         *
+ *   This program is free software: you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation, either version 3 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ *   This program is distributed in the hope that it will be useful,       *
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
+ *   GNU General Public License for more details.                          *
+ *                                                                         *
+ *   You should have received a copy of the GNU General Public License     *
+ *   along with this program.  If not, see <http://www.gnu.org/licenses/>. *
+ *                                                                         *
+ ***************************************************************************/
+
 package jeplus;
 
-import java.io.*;
-import java.text.SimpleDateFormat;
-import java.util.*;
-import jeplus.util.RelativeDirUtil;
+import java.awt.image.BufferedImage;
+import java.io.File;
+import java.io.FileFilter;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import javax.imageio.ImageIO;
+import jeplus.data.DaySimModel;
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.filefilter.OrFileFilter;
 import org.apache.commons.io.filefilter.WildcardFileFilter;
+import org.apache.log4j.PropertyConfigurator;
 import org.slf4j.LoggerFactory;
 
 /**
  * <p>Title: jEPlus - EnergyPlus execution utilities </p>
- * <p>Description: Utilities for updating TRNSYS dirs/files and triggering TRNSYS simulation </p>
- * <p>Copyright: Copyright (c) 2005-2010</p>
- * <p>Company: IESD, De Montfort University</p>
- *
- * @author Yi Zhang, Jose Santiago
- * @version 0.5c
- * @since 0.1
+ * <p>Description: Utilities for updating Radiance dirs/files and calling Radiance executables</p>
+ * <p>Copyright: Copyright (c) 2015, Yi Zhang</p>
+ * @author Yi Zhang
+ * @version 1.6
+ * @since 1.6
  */
 public class RadianceWinTools {
 
-    /**
-     * Logger
-     */
+    /** Logger */
     final static org.slf4j.Logger logger = LoggerFactory.getLogger(RadianceWinTools.class);
 
     /**
-     * Put the name of Output printers files in a list
-     *
-     * @printers String with the name of Output printers files in jEPlus format
-     * @return the name of the Output printers files in a list
+     * Clean up working directory after simulation, based on the options to keep
+     * working files and the list of files to delete.
+     * @param workdir The working directory to be cleared
+     * @param filesToDelete A [,;: ] separated list of file names to be deleted from the directory
+     * @return Clean up successful or not. False is return if error occurs when deleting any file 
      */
-    public static ArrayList<String> getPrintersFunc(String printers) {
-        String[] PrintList = printers.split("\\s*[,;:\"]\\s*");
-        ArrayList<String> Printers = new ArrayList<>();
-        for (int i = 0; i < PrintList.length; i++) {
-            if (!PrintList[i].trim().isEmpty()) {
-                int cont = PrintList[i].indexOf(".");
-                if (PrintList[i].indexOf(".", cont + 1) != -1) {
-                    String[] aux = PrintList[i].trim().split("\\s*[ ]\\s*");
-                    for (int j = 0; j < aux.length; j++) {
-                        if (!Printers.contains(aux[j])) {
-                            Printers.add(aux[j].toLowerCase());
-                        }
-                    }
-                } else {
-                    if (!Printers.contains(PrintList[i].trim())) {
-                        Printers.add(PrintList[i].trim().toLowerCase());
-                    }
-                }
-            }
-        }
-        return Printers;
-    }
-
-    /**
-     * Update the DCK template file with the absolute directory for ASSIGN calls
-     *
-     * @param line Assign line
-     * @param DCKDir The directory of template DCK
-     * @param WorkDir The working directory in which the new DCK file will be saved
-     * @param searchstrings The list of search strings to be looked up
-     * @param newvals The list of new values to be used to replace the search strings
-     * @param printers The printers in the dck model
-     * @return Assign line modified
-     */
-    public static String TRNSYSUpdateAssign(String line, String DCKDir, String WorkDir, String[] searchstrings, String[] newvals, ArrayList<String> Printers) {
-
-        // Parse Assign statement
-        String[] args = new String[0];
-        if (line.indexOf("\"") != -1) {
-            args = line.trim().split("\\s*\"\\s*");
-        } else {
-            args = line.trim().split("\\s* \\s*");
-        }
-        // Check if file name in the output file list
-        String assigname = new File(args[1].trim()).getName();
-        String fullpath = RelativeDirUtil.checkAbsolutePath(args[1].trim(), DCKDir);
-        if (!Printers.contains(assigname.toLowerCase())) {
-            if (new File(fullpath).exists()) {
-                boolean ok = false;
-                try (   BufferedReader insassign = new BufferedReader(new InputStreamReader(new FileInputStream(fullpath), "ISO-8859-1"));
-                        PrintWriter outsassign = new PrintWriter(new OutputStreamWriter(new FileOutputStream(WorkDir + assigname), "ISO-8859-1"))) {
-                    String line2 = insassign.readLine();
-                    while (line2 != null) {
-                        for (int j = 0; j < searchstrings.length; j++) {
-                            if ((!ok) && (line2.indexOf(searchstrings[j]) != -1)) {
-                                ok = true;
-                            }
-                            line2 = line2.replaceAll(searchstrings[j], newvals[j]);
-                        }
-                        outsassign.println(line2);
-                        line2 = insassign.readLine();
-                    }
-                    outsassign.flush();
-                } catch (Exception ex) {
-                    logger.error("Error updating file " + fullpath + " to " + WorkDir + assigname, ex);
-                    ok = false;
-                }
-                if (ok) {
-                    line = args[0].trim() + " \"" + assigname + "\" " + args[2].trim();
-                    TRNSYSTask.setjeplusfile(assigname);
-                } else {
-                    line = args[0].trim() + " \"" + fullpath + "\" " + args[2].trim();
-                    new File(WorkDir + assigname).delete();
-                }
-            } else {
-                line = args[0].trim() + " \"" + fullpath + "\" " + args[2].trim();
-            }
-        } else {
-            line = args[0].trim() + " \"" + assigname + "\" " + args[2].trim();
-        }
-        return line;
-    }
-
-    /**
-     * Update the DCK template file with the absolute directory for INCLUDE calls
-     * @param fn The target DCK file
-     * @param DCKTemplate The template DCK file that contains the search strings
-     * @param TargetDir The working directory in which the new DCK file will be saved
-     * @return state of execution
-     */
-    public static boolean TRNSYSUpdateInclude(String fn, String TargetDir, String DCKTemplate, String DCKDir, boolean a) {
-        boolean success = true;
-
-        // Load and edit the template file
-        try (BufferedReader ins = new BufferedReader(new FileReader(DCKDir + DCKTemplate));
-            PrintWriter outs = new PrintWriter(new FileWriter(TargetDir + fn))) {
-        
-            String line = ins.readLine();
-            while (line != null) {
-                if (line.trim().startsWith("INCLUDE")) {
-                    String include = line.trim().substring(7).toString().trim().replaceAll("\"", "");
-                    if (include.indexOf(" ") > 0) {
-                        include = include.substring(0, include.indexOf(" ")).replaceAll("\"", "");
-                    }
-                    String cmd = RelativeDirUtil.checkAbsolutePath(include, DCKDir);
-                    outs.println("*+*\n* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                    outs.println("*     --> INCLUDE FILE: " + "\"" + cmd + "\" <--");
-                    outs.println("* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                    try (BufferedReader inc = new BufferedReader(new FileReader(cmd))) {
-                        String line2 = inc.readLine();
-                        while (line2 != null) {
-                            outs.println(line2);
-                            line2 = inc.readLine();
-                        }
-                    }catch (Exception ex) {
-                        logger.error("Error reading include file " + cmd, ex);
-                        outs.println("* Error reading include file... ");
-                        success = false;
-                    }
-                    outs.println("* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                    outs.println("*     --> END OF INCLUDE FILE: " + "\"" + cmd + "\" <--");
-                    line = "* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *\n*+*";
-                }
-                outs.println(line);
-                line = ins.readLine();
-            }
-            outs.flush();
-        } catch (Exception e) {
-            logger.error("Error updating include file information in " + DCKDir + DCKTemplate + " to " + TargetDir + fn, e);
-            success = false;
-        }
-        return success;
-    }
-
-    /**
-     * Update the DCK template file with the absolute directory for INCLUDE calls
-     *
-     * @param DCKin The template DCK file that contains the search strings
-     * @return state of execution
-     */
-    public static boolean TRNSYSUpdateInclude(String DCKin, String TemplateBaseDir, String DCKout, String WorkingDir, String printers) {
-
-        boolean success = true;
-        // Split printer file names
-        ArrayList<String> Printers = getPrintersFunc(printers);
-        // Load and edit the template file
-        try {
-            // source
-            BufferedReader ins = new BufferedReader(new InputStreamReader(new FileInputStream(TemplateBaseDir + DCKin), "ISO-8859-1"));
-            // target
-            File workdir = new File(WorkingDir);
-            if (!workdir.exists()) {
-                success = workdir.mkdirs();
-            }
-            if (success && workdir.isDirectory()) {
-                PrintWriter outs = new PrintWriter(new OutputStreamWriter(new FileOutputStream(WorkingDir + DCKout), "ISO-8859-1"));
-                String line = ins.readLine();
-                while (line != null) {
-                    // Look for Include command
-                    if (line.trim().startsWith("INCLUDE")) {
-                        String[] include = new String[0];
-                        if (line.indexOf("\"") != -1) {
-                            include = line.trim().split("\\s*\"\\s*");
-                        } else {
-                            include = line.trim().split("\\s* \\s*");
-                        }
-                        String cmd = RelativeDirUtil.checkAbsolutePath(include[1].trim(), TemplateBaseDir);
-
-                        if (!(new File(cmd).exists())) {
-                            success = false;
-                            outs.println("*+*\n* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                            outs.println("*     --> INCLUDE FILE: " + "\"" + cmd + "\" HAS NOT BEEN FOUND <--");
-                            outs.println("* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                        } else {
-                            outs.println("*+*\n* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                            outs.println("*     --> INCLUDE FILE: " + "\"" + cmd + "\" <--");
-                            outs.println("* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                            try {
-                                BufferedReader inc = new BufferedReader(new InputStreamReader(new FileInputStream(cmd), "ISO-8859-1"));
-                                String line2 = inc.readLine();
-                                while (line2 != null) {
-                                    // Handles relative paths in the included content
-                                    if (line2.trim().startsWith("ASSIGN")) {
-                                        // Parse Assign statement
-                                        String[] args = new String[0];
-                                        if (line2.indexOf("\"") != -1) {
-                                            args = line2.trim().split("\\s*\"\\s*");
-                                        } else {
-                                            args = line2.trim().split("\\s* \\s*");
-                                        }
-                                        // Check if file name in the output file list
-                                        String includepath = new String();
-                                        if (cmd.lastIndexOf(File.separator) == cmd.length()) {
-                                            includepath = cmd.substring(0, cmd.length() - 1);
-                                        } else {
-                                            includepath = cmd;
-                                        }
-                                        includepath = includepath.substring(0, includepath.lastIndexOf(File.separator) + 1);
-                                        if (!Printers.contains(new File(args[1].trim().toLowerCase()).getName().toString())) {
-                                            String fullpath = RelativeDirUtil.checkAbsolutePath(args[1].trim(), includepath);
-                                            line2 = args[0].trim() + " \"" + fullpath.trim() + "\" " + args[2].trim();
-                                        } else {
-                                            line2 = args[0].trim() + " \"" + new File(args[1].trim()).getName().toString() + "\" " + args[2].trim();
-                                        }
-                                    }
-                                    outs.println(line2);
-                                    line2 = inc.readLine();
-                                }
-                                inc.close();
-                            } catch (Exception ex) {
-                                ex.printStackTrace();
-                                success = false;
-                                outs.println("*     --> INCLUDE FILE IS NOT VALID OR NOT EDITABLE <--");
-                            }
-                            outs.println("* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *");
-                            outs.println("*     --> END OF INCLUDE FILE: " + "\"" + cmd + "\" <--");
-                            line = "* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *\n*+*";
-                        }
-                    }
-                    outs.println(line);
-                    line = ins.readLine();
-                }
-                outs.flush();
-                outs.close();
-            }
-            ins.close();
-//            File outfile = new File(WorkingDir + DCKout);
-//            File infile = new File(WorkingDir + DCKin);
-//            infile.delete();
-//            outfile.renameTo(new File(DCKin));
-        } catch (Exception e) {
-            e.printStackTrace();
-            success = false;
-        }
-        return success;
-    }
-
-    /**
-     * Save the changes of the part INCLUDE from the DCK template to the original INCLUDE file(s)
-     *
-     * @param DCKTemplate The template DCK file that contains the search strings
-     * @return state of execution
-     */
-    public static boolean TRNSYSSaveIncludeChanges(String DCKTemplate, String DCKDir) {
-
-        boolean success = true;
-
-        // Load and edit the template file
-        try {
-            BufferedReader ins = new BufferedReader(new FileReader(DCKDir + DCKTemplate));
-            String line = ins.readLine();
-            while (line != null) {
-                if (line.trim().startsWith("*     --> INCLUDE FILE: ")) {
-                    String incDir = line.substring(23).trim();
-                    incDir = incDir.substring(0, incDir.indexOf(" ")).trim().replaceAll("\"", "");
-                    line = ins.readLine();
-                    PrintWriter outs = new PrintWriter(new FileWriter(incDir));
-                    while ((line != null) && (!line.trim().startsWith("*     --> END OF INCLUDE FILE: "))) {
-                        if (line.indexOf("* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *") == -1) {
-                            outs.println(line);
-                        }
-                        line = ins.readLine();
-                    }
-                    outs.flush();
-                    outs.close();
-                }
-                line = ins.readLine();
-            }
-            ins.close();
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            success = false;
-        }
-        return success;
-    }
-
-    /**
-     * Update the problem setup by replacing the searchstrings in the DCK template file with the newvals strings, and save the new file in
-     * the working directory with the given name + ".dck".
-     *
-     * @param fn The target DCK file without the extension
-     * @param DCKTemplate The template DCK file that contains the search strings
-     * @param searchstrings The list of search strings to be looked up
-     * @param newvals The list of new values to be used to replace the search strings
-     * @param TarjetDir The working directory in which the new DCK file will be saved
-     * @return state of execution
-     */
-    public static boolean updateDCKFile(String fn, String TargetDir, String DCKTemplate, String DCKDir, String[] searchstrings, String[] newvals) {
-
-        boolean success = true;
-
-        // Load and edit the template file
-        try {
-            BufferedReader ins = new BufferedReader(new FileReader(DCKDir + DCKTemplate));
-            PrintWriter outs = new PrintWriter(new FileWriter(TargetDir + fn));
-            String line = ins.readLine();
-            int n = searchstrings.length;
-            while (line != null) {
-                for (int i = 0; i < n; i++) {
-                    if ((line.indexOf(searchstrings[i]) != -1) && (line.trim().startsWith("ASSIGN"))) {
-                        String fileto = RelativeDirUtil.checkAbsolutePath(new File(newvals[i]).getName().toString(), TargetDir);
-                        String filefrom = RelativeDirUtil.checkAbsolutePath(newvals[i], DCKDir);
-                        success = fileCopy(filefrom, fileto);
-                        String LogicalNumber = line.trim().substring(6).toString().trim();
-                        LogicalNumber = LogicalNumber.substring(LogicalNumber.indexOf(" ")).trim();
-                        if (LogicalNumber.indexOf(" ") > 0) {
-                            LogicalNumber = LogicalNumber.substring(0, LogicalNumber.indexOf(" "));
-                        }
-                        line = "ASSIGN " + "\"" + filefrom + "\" " + LogicalNumber;
-                    }
-                    line = line.replaceFirst(searchstrings[i], newvals[i]);
-                }
-                outs.println(line);
-                line = ins.readLine();
-            }
-            ins.close();
-            outs.flush();
-            outs.close();
-        } catch (Exception e) {
-            e.printStackTrace();
-            success = false;
-        }
-
-        return success;
-    }
-
-    /**
-     * Update the problem setup by replacing the searchstrings in the DCK template file with the newvals strings, and save the new file in
-     * the working directory with the default TRNSYS input file name ("in.dck" at present).
-     *
-     * @param DCKin The template DCK file that contains the search strings
-     * @param DCKDir The directory of template DCK
-     * @param DCKout The target DCK file in the working directory (in.dck by default)
-     * @param WorkDir The working directory in which the new DCK file will be saved
-     * @param searchstrings The list of search strings to be looked up
-     * @param newvals The list of new values to be used to replace the search strings
-     * @param printers The printers in the dck model. Printer's file name will not be changed into absolute form
-     * @return state of execution
-     */
-    public static boolean updateDCKFile(String DCKin, String DCKDir, String DCKout, String WorkDir, String[] searchstrings, String[] newvals, String printers) {
-
-        boolean success = true;
-        // Split printer file names
-        ArrayList<String> Printers = getPrintersFunc(printers);
-        // Load and edit the template file
-        try {
-            File workdir = new File(WorkDir);
-            if (!workdir.exists()) {
-                success = workdir.mkdirs();
-            }
-            if (success && workdir.isDirectory()) {
-                BufferedReader ins = new BufferedReader(new InputStreamReader(new FileInputStream(DCKDir + DCKin), "ISO-8859-1"));
-                PrintWriter outs = new PrintWriter(new OutputStreamWriter(new FileOutputStream(WorkDir + DCKout), "ISO-8859-1"));
-                String line = ins.readLine();
-                while (line != null) {
-                    // Replace search tags
-                    for (int i = 0; i < searchstrings.length; i++) {
-                        line = line.replaceAll(searchstrings[i], newvals[i]);
-                    }
-                    // Handles relative paths in the DCK model
-                    if (line.trim().startsWith("ASSIGN")) {
-
-                        line = TRNSYSUpdateAssign(line, DCKDir, WorkDir, searchstrings, newvals, Printers);
-
-                    } else if (line.trim().startsWith("INCLUDE")) {
-
-                        boolean ok = false;
-                        String[] include = new String[0];
-                        if (line.indexOf("\"") != -1) {
-                            include = line.trim().split("\\s*\"\\s*");
-                        } else {
-                            include = line.trim().split("\\s* \\s*");
-                        }
-                        String cmd = RelativeDirUtil.checkAbsolutePath(include[1].trim(), DCKDir);
-                        String incluname = new File(include[1].trim()).getName();
-                        try {
-                            BufferedReader inc = new BufferedReader(new InputStreamReader(new FileInputStream(cmd), "ISO-8859-1"));
-                            PrintWriter outc = new PrintWriter(new OutputStreamWriter(new FileOutputStream(WorkDir + incluname), "ISO-8859-1"));
-                            String line2 = inc.readLine();
-                            while (line2 != null) {
-                                for (int j = 0; j < searchstrings.length; j++) {
-                                    if ((!ok) && (line2.indexOf(searchstrings[j]) != -1)) {
-                                        ok = true;
-                                    }
-                                    line2 = line2.replaceAll(searchstrings[j], newvals[j]);
-                                }
-                                if (line2.trim().startsWith("ASSIGN")) {
-                                    line2 = TRNSYSUpdateAssign(line2, DCKDir, WorkDir, searchstrings, newvals, Printers);
-                                    ok = true;
-                                }
-                                outc.println(line2);
-                                line2 = inc.readLine();
-                            }
-                            outc.flush();
-                            outc.close();
-                            inc.close();
-                        } catch (Exception ex) {
-                            ex.printStackTrace();
-                            success = false;
-                        }
-                        if (ok) {
-                            line = include[0].trim() + " \"" + incluname + "\"";
-                            TRNSYSTask.setjeplusfile(incluname);
-                        } else {
-                            line = include[0].trim() + " \"" + cmd + "\"";
-                            new File(WorkDir + incluname).delete();
-                        }
-                    }
-                    // Write to file
-                    outs.println(line);
-                    // Next line
-                    line = ins.readLine();
-                }
-                outs.flush();
-                outs.close();
-                ins.close();
-            } else {
-                success = false;
-            }
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            success = false;
-        }
-
-        return success;
-    }
-
-    public static boolean cleanupWorkDir(String workdir, boolean keepeplus, boolean keepjeplus, boolean keepdir, String filesToDelete, String printers) {
+    public static boolean cleanupWorkDir(String workdir, String filesToDelete) {
         boolean success = true;
 
         // Create the directory
         File dir = new File(workdir);
-        ArrayList<String> jeplus = TRNSYSTask.getjeplusfiles();
-        TRNSYSTask.setjeplusfile(TRNSYSConfig.getTRNSYSDefDCK());
         if (dir.exists()) {
-            if (!keepdir) {
-                File[] files = dir.listFiles();
-                for (int i = 0; i < files.length; i++) {
-                    files[i].delete();
+            if (filesToDelete != null) {
+                String [] patterns = filesToDelete.split("\\s*[,;: ]\\s*");
+                OrFileFilter filter = new OrFileFilter ();
+                for (String pattern : patterns) {
+                    filter.addFileFilter(new WildcardFileFilter(pattern));
                 }
-                success = dir.delete();
-            } else {
-                if (!keepjeplus) {
-                    File[] files = dir.listFiles();
-                    for (int i = 0; i < files.length; i++) {
-                        if ((jeplus.contains(files[i].getName())) && (files[i].getName().indexOf(TRNSYSConfig.getTRNSYSDefLST()) == -1)) {
-                            success &= files[i].delete();
-                        }
-                    }
-                }
-                if (!keepeplus) {
-                    File[] files = dir.listFiles();
-                    for (int i = 0; i < files.length; i++) {
-                        if ((!jeplus.contains(files[i].getName())) && (!getPrintersFunc(printers).contains(files[i].getName().toLowerCase())) && (files[i].getName().indexOf(TRNSYSConfig.getTRNSYSDefLST()) == -1)) {
-                            success &= files[i].delete();
-                        }
-                    }
-                }
-                if (filesToDelete != null) {
-                    String[] patterns = filesToDelete.split("\\s*[,;: ]\\s*");
-                    OrFileFilter filter = new OrFileFilter();
-                    for (int i = 0; i < patterns.length; i++) {
-                        filter.addFileFilter(new WildcardFileFilter(patterns[i]));
-                    }
-                    File[] files = dir.listFiles((FileFilter) filter);
-                    for (int i = 0; i < files.length; i++) {
-                        success &= files[i].delete();
-                    }
+                File [] files = dir.listFiles((FileFilter)filter);
+                for (File file : files) {
+                    success &= file.delete();
                 }
             }
         }
@@ -519,7 +79,6 @@ public class RadianceWinTools {
 
     /**
      * Create working directory and prepare input files for simulation
-     *
      * @param workdir The directory to be created
      * @return Preparation successful or not
      */
@@ -530,153 +89,388 @@ public class RadianceWinTools {
         if (!dir.exists()) {
             success = dir.mkdirs();
         } else if (!dir.isDirectory()) {
-            System.err.println(dir.toString() + " is present but not a directory.");
+            logger.error(dir.toString() + " is present but not a directory.");
             success = false;
         }
         if (success) {
-            // Copying all include and external files to the work directory
-            // success = success && fileCopy(weatherfile, workdir + EPlusConfig.getEPDefEPW());
-            // if (! success)
-            // System.err.println("TRNSYSWinTools.prepareWorkDir(): cannot copy all neccessray files to the working directory.");
-            File[] files = dir.listFiles();
-            for (int i = 0; i < files.length; i++) {
-                files[i].delete();
+            File [] files = dir.listFiles();
+            for (File file : files) {
+                file.delete();
             }
-        }
-        return success;
-    }
-
-    /**
-     * Copy a file from one location to another
-     *
-     * @param from The source file to be copied
-     * @param to The target file to write
-     * @return Successful or not
-     */
-    public static boolean fileCopy(String from, String to) {
-        boolean success = true;
-        try {
-            FileReader in = new FileReader(from);
-            FileWriter out = new FileWriter(to);
-            int c;
-            while ((c = in.read()) != -1) {
-                out.write(c);
-            }
-            in.close();
-            out.close();
-        } catch (Exception ee) {
-            ee.printStackTrace();
-            success = false;
         }
         return success;
     }
 
     /**
      * Write a Job Done marker, typically a file named 'job.done!' in the given folder
-     *
      * @param dir The folder in which the marker is written
      * @param marker The marker file name. The file contains a string "Job done!"
      * @return Marker is written successfully or not
      */
-    public static boolean writeJobDoneMarker(String dir, String marker) {
-        try {
-            FileWriter fw = new FileWriter(dir + (dir.endsWith(File.separator) ? "" : File.separator) + marker);
+    public static boolean writeJobDoneMarker (String dir, String marker) {
+        try (FileWriter fw = new FileWriter (dir + (dir.endsWith(File.separator)?"":File.separator) + marker)) {
             fw.write("Job done!");
-            fw.close();
             return true;
-        } catch (Exception ex) {
-            ex.printStackTrace();
+        }catch (Exception ex) {
+            logger.error("Error writing the marker " + marker, ex);
         }
         return false;
     }
 
     /**
      * Remote the Job Done marker if exists. The marker file is typically named 'job.done!' in the given folder
-     *
      * @param dir The folder in which the marker is written
      * @param marker The marker file name. The file contains a string "Job done!"
      * @return Marker is removed successfully or not
      */
-    public static boolean removeJobDoneMarker(String dir, String marker) {
+    public static boolean removeJobDoneMarker (String dir, String marker) {
         try {
-            File markerfile = new File(dir + (dir.endsWith(File.separator) ? "" : File.separator) + marker);
-            if (markerfile.exists()) {
-                markerfile.delete();
-            }
+            File markerfile = new File(dir + (dir.endsWith(File.separator)?"":File.separator) + marker);
+            if (markerfile.exists()) markerfile.delete();
             return true;
-        } catch (Exception ex) {
-            ex.printStackTrace();
+        }catch (Exception ex) {
+            logger.error("Error removing marker " + marker, ex);
         }
         return false;
     }
 
     /**
-     * Call TRNSYS executable file to run the simulation
-     *
+     * Call Rtrace to run the simulation
+     * @param config Radiance Configuration
      * @param WorkDir The working directory where the input files are stored and the output files to be generated
-     * @param useReadVars Whether or not to use readvars after simulation
+     * @param args
+     * @param model
+     * @param in
+     * @param out
+     * @param err
      * @return the result code represents the state of execution steps. >=0 means successful
      */
-    public static int runTRNSYS(TRNSYSConfig config, String WorkDir, String dckfile) {
+    public static int runRtrace (RadianceConfig config, String WorkDir, String args, String model, String in, String out, String err) {
 
         int ExitValue = -99;
 
         try {
-            Process EPProc = null;
+            StringBuilder buf = new StringBuilder (config.getResolvedRadianceBinDir());
+            buf.append(File.separator).append("rtrace");
 
-            // Run EnergyPlus executable
-            String CmdLine = config.getResolvedTRNSYSEXEC() + " " + dckfile + " /n /h";
-            // Requested by Ewen Raballand on 14-2-2014
-            // String CmdLine = config.getResolvedTRNSYSEXEC() + " " + dckfile + " /n";
-            EPProc = Runtime.getRuntime().exec(CmdLine, null, new File(WorkDir));
+            List<String> command = new ArrayList<> ();
+            command.add(buf.toString());
+            String [] arglist = args.split("\\s+");
+            command.addAll(Arrays.asList(arglist));
+            command.add(model);
+            ProcessBuilder builder = new ProcessBuilder(command);
+            builder.directory(new File (WorkDir));
+            builder.environment().put("RAYPATH", config.getResolvedRadianceLibDir());
+            builder.redirectError(new File(WorkDir + File.separator + err));
+            builder.redirectOutput(new File(WorkDir + File.separator + out));
+            builder.redirectInput(new File(WorkDir + File.separator + in));
 
-            BufferedReader ins = new BufferedReader(new InputStreamReader(EPProc.getInputStream()));
-            BufferedWriter outs = new BufferedWriter(new FileWriter(config.ScreenFile, true));
-            outs.newLine();
-            outs.write("Calling TRNexe - " + (new SimpleDateFormat()).format(new Date()));
-            outs.newLine();
-            outs.write("Command line: " + WorkDir + ">" + CmdLine);
-            outs.newLine();
-
-            int res = ins.read();
-            while (res != -1) {
-                outs.write(res);
-                res = ins.read();
-            }
-            ins.close();
-            outs.newLine();
-            outs.flush();
-            outs.close();
-
-            EPProc.waitFor();
-            ExitValue += EPProc.exitValue(); // What's TRNSYS exit value?
-
-            // set it to successful
-            ExitValue = 0;
-        } catch (Exception e) {
-            System.err.println("TRNSYSWinTools.runTRNSYS(): "
-                    + e.toString());
+            Process proc = builder.start();
+            ExitValue = proc.waitFor();
+        } catch (IOException | InterruptedException ex) {
+            logger.error("Error occoured when executing Rtrace", ex);
         }
 
         // Return Radiance exit value
         return ExitValue;
     }
-
+    
     /**
-     * Test if any of the given files in jEPlus format is available in the given directory as an indicator of successful run.
-     *
-     * @return boolean True if the file is present at the specified location
+     * Call Rpict to run the simulation
+     * @param config Radiance Configuration
+     * @param WorkDir The working directory where the input files are stored and the output files to be generated
+     * @param args
+     * @param model
+     * @param in
+     * @param out
+     * @param err
+     * @param jpg Switch for converting scene to jpg or not
+     * @return the result code represents the state of execution steps. >=0 means successful
      */
-    public static boolean isAnyFileAvailable(String FileNames, String workdir) {
-        boolean found = true;
-        ArrayList<String> filename = getPrintersFunc(FileNames);
-        for (int i = 0; i < filename.size(); i++) {
-            if (new File(workdir + filename.get(i)).exists()) {
-                found = true & found;
-            } else {
-                found = false & found;
+    public static int runRpict (RadianceConfig config, String WorkDir, String args, String model, String in, String out, String err, boolean jpg) {
+
+        int ExitValue = -99;
+
+        // Call rpict
+        try {
+            StringBuilder buf = new StringBuilder (config.getResolvedRadianceBinDir());
+            buf.append(File.separator).append("rpict");
+
+            List<String> command = new ArrayList<> ();
+            command.add(buf.toString());
+            String [] arglist = args.split("\\s+");
+            command.addAll(Arrays.asList(arglist));
+            command.add(model);
+            ProcessBuilder builder = new ProcessBuilder(command);
+            builder.directory(new File (WorkDir));
+            builder.environment().put("RAYPATH", config.getResolvedRadianceLibDir());
+            builder.redirectError(new File(WorkDir + File.separator + err));
+            builder.redirectOutput(new File(WorkDir + File.separator + out));
+            if (in != null) {
+                builder.redirectInput(new File(WorkDir + File.separator + in));
+            }
+            Process proc = builder.start();
+            ExitValue = proc.waitFor();
+        } catch (IOException | InterruptedException ex) {
+            logger.error("Error occoured when executing Rpict", ex);
+        }
+        
+        if (jpg) {
+
+            // Filter scene
+            try {
+                StringBuilder buf = new StringBuilder (config.getResolvedRadianceBinDir());
+                buf.append(File.separator).append("pfilt");
+
+                List<String> command = new ArrayList<> ();
+                command.add(buf.toString());
+                String [] arglist = "-1 -e -3".split("\\s+");
+                command.addAll(Arrays.asList(arglist));
+                command.add(out);
+                ProcessBuilder builder = new ProcessBuilder(command);
+                builder.directory(new File (WorkDir));
+                builder.environment().put("RAYPATH", config.getResolvedRadianceLibDir());
+                builder.redirectError(new File(WorkDir + File.separator + err));
+                builder.redirectOutput(new File(WorkDir + File.separator + out + ".flt"));
+                Process proc = builder.start();
+                ExitValue = proc.waitFor();
+            } catch (IOException | InterruptedException ex) {
+                logger.error("Error occoured when executing pfilt", ex);
+            }
+
+            // Convert to bmp
+            try {
+                StringBuilder buf = new StringBuilder (config.getResolvedRadianceBinDir());
+                buf.append(File.separator).append("ra_bmp");
+
+                List<String> command = new ArrayList<> ();
+                command.add(buf.toString());
+                String [] arglist = "-g 1.0".split("\\s+");
+                command.addAll(Arrays.asList(arglist));
+                command.add(out + ".flt");
+                command.add(out + ".bmp");
+                ProcessBuilder builder = new ProcessBuilder(command);
+                builder.directory(new File (WorkDir));
+                builder.environment().put("RAYPATH", config.getResolvedRadianceLibDir());
+                builder.redirectError(ProcessBuilder.Redirect.appendTo(new File(WorkDir + File.separator + err)));
+                Process proc = builder.start();
+                ExitValue = proc.waitFor();
+            } catch (IOException | InterruptedException ex) {
+                logger.error("Error occoured when executing ra_bmp", ex);
+            }
+            
+            // Convert to jpg
+            BufferedImage input_image = null; 
+            try {
+                input_image = ImageIO.read(new File(WorkDir + File.separator + out + ".bmp")); //read bmp into input_image object
+                File outputfile = new File(WorkDir + File.separator + out + ".jpg"); //create new outputfile object
+                ImageIO.write(input_image, "jpg", outputfile); //write JPG output to file 
+            }catch (Exception ex) {
+                logger.error ("Error converting bmp to jpg.", ex);
             }
         }
-        return found;
+        // Return Radiance exit value
+        return ExitValue;
+    }
+    
+    /**
+     * Call DaySim gen_dc to run the simulation
+     * @param config Radiance Configuration
+     * @param WorkDir The working directory where the input files are stored and the output files to be generated
+     * @param model
+     * @param in
+     * @param out
+     * @param err
+     * @return the result code represents the state of execution steps. >=0 means successful
+     */
+    public static int runGen_DC (RadianceConfig config, String WorkDir, String model, String in, String out, String err) {
+
+        int ExitValue = -99;
+        
+        // Manipulate header file
+        HashMap <String, String> props = new HashMap<> ();
+        // props.put("project_name", "");
+        props.put("project_directory", "./");
+        props.put("bin_directory", config.getResolvedDaySimBinDir());
+        props.put("tmp_directory", "./");
+        props.put("Template_File", config.getResolvedDaySimBinDir() + "../template/");
+        props.put("sensor_file", in);
+        try {
+            FileUtils.moveFile(new File (WorkDir + File.separator + model), new File (WorkDir + File.separator + model + ".ori"));
+        } catch (IOException ex) {
+            logger.error("Error renaming header file to " + WorkDir + File.separator + model + ".ori", ex);
+        }
+        DaySimModel.updateHeaderFile(WorkDir + File.separator + model + ".ori", WorkDir + File.separator + model, props);
+        
+        // Run command
+        try {
+            StringBuilder buf = new StringBuilder (config.getResolvedDaySimBinDir());
+            buf.append(File.separator).append("gen_dc");
+
+            List<String> command = new ArrayList<> ();
+            command.add(buf.toString());
+            command.add(model);
+            ProcessBuilder builder = new ProcessBuilder(command);
+            builder.directory(new File (WorkDir));
+            builder.environment().put("RAYPATH", config.getResolvedDaySimLibDir());
+            builder.redirectError(new File(WorkDir + File.separator + err));
+            builder.redirectOutput(new File(WorkDir + File.separator + out));
+            if (in != null) {
+                builder.redirectInput(new File(WorkDir + File.separator + in));
+            }
+            Process proc = builder.start();
+            ExitValue = proc.waitFor();
+        } catch (IOException | InterruptedException ex) {
+            logger.error("Error occoured when executing DaySim gen_dc", ex);
+        }
+
+        // Return Radiance exit value
+        return ExitValue;
+    }
+    
+    /**
+     * Call a sequence of DaySim programs to run the simulation
+     * @param config Radiance Configuration
+     * @param WorkDir The working directory where the input files are stored and the output files to be generated
+     * @param model
+     * @param in
+     * @param out
+     * @param err
+     * @return the result code represents the state of execution steps. >=0 means successful
+     */
+    public static int runDaySim (RadianceConfig config, String WorkDir, String model, String in, String out, String err) {
+
+        int ExitValue = -99;
+        
+        // Manipulate header file
+        HashMap <String, String> props = new HashMap<> ();
+        // props.put("project_name", "");
+        props.put("project_directory", "./");
+        props.put("bin_directory", config.getResolvedDaySimBinDir());
+        props.put("tmp_directory", "./");
+        props.put("Template_File", config.getResolvedDaySimBinDir() + "../template/DefaultTemplate.htm");
+        props.put("sensor_file", in);
+        try {
+            FileUtils.moveFile(new File (WorkDir + File.separator + model), new File (WorkDir + File.separator + model + ".ori"));
+        } catch (IOException ex) {
+            logger.error("Error renaming header file to " + WorkDir + File.separator + model + ".ori", ex);
+        }
+        DaySimModel.updateHeaderFile(WorkDir + File.separator + model + ".ori", WorkDir + File.separator + model, props);
+        
+        // Run gen_dc command
+        try {
+            StringBuilder buf = new StringBuilder (config.getResolvedDaySimBinDir());
+            buf.append(File.separator).append("gen_dc");
+
+            List<String> command = new ArrayList<> ();
+            command.add(buf.toString());
+            command.add(model);
+            ProcessBuilder builder = new ProcessBuilder(command);
+            builder.directory(new File (WorkDir));
+            builder.environment().put("RAYPATH", config.getResolvedDaySimLibDir());
+            builder.redirectError(new File(WorkDir + File.separator + err));
+            builder.redirectOutput(new File(WorkDir + File.separator + out));
+            if (in != null) {
+                builder.redirectInput(new File(WorkDir + File.separator + in));
+            }
+            Process proc = builder.start();
+            ExitValue = proc.waitFor();
+        } catch (IOException | InterruptedException ex) {
+            logger.error("Error occoured when executing gen_dc", ex);
+        }
+
+        // Run ds_illum command
+        try {
+            StringBuilder buf = new StringBuilder (config.getResolvedDaySimBinDir());
+            buf.append(File.separator).append("ds_illum");
+
+            List<String> command = new ArrayList<> ();
+            command.add(buf.toString());
+            command.add(model);
+            ProcessBuilder builder = new ProcessBuilder(command);
+            builder.directory(new File (WorkDir));
+            builder.environment().put("RAYPATH", config.getResolvedDaySimLibDir());
+            builder.redirectError(ProcessBuilder.Redirect.appendTo(new File(WorkDir + File.separator + err)));
+            builder.redirectOutput(ProcessBuilder.Redirect.appendTo(new File(WorkDir + File.separator + out)));
+            if (in != null) {
+                builder.redirectInput(new File(WorkDir + File.separator + in));
+            }
+            Process proc = builder.start();
+            ExitValue = proc.waitFor();
+        } catch (IOException | InterruptedException ex) {
+            logger.error("Error occoured when executing ds_illum", ex);
+        }
+
+        // Run ds_el_lighting command
+        try {
+            StringBuilder buf = new StringBuilder (config.getResolvedDaySimBinDir());
+            buf.append(File.separator).append("ds_el_lighting");
+
+            List<String> command = new ArrayList<> ();
+            command.add(buf.toString());
+            command.add(model);
+            ProcessBuilder builder = new ProcessBuilder(command);
+            builder.directory(new File (WorkDir));
+            builder.environment().put("RAYPATH", config.getResolvedDaySimLibDir());
+            builder.redirectError( ProcessBuilder.Redirect.appendTo(new File(WorkDir + File.separator + err)));
+            builder.redirectOutput(ProcessBuilder.Redirect.appendTo(new File(WorkDir + File.separator + out)));
+            if (in != null) {
+                builder.redirectInput(new File(WorkDir + File.separator + in));
+            }
+            Process proc = builder.start();
+            ExitValue = proc.waitFor();
+        } catch (IOException | InterruptedException ex) {
+            logger.error("Error occoured when executing ds_el_lighting", ex);
+        }
+
+        // Return Radiance exit value
+        return ExitValue;
+    }
+    
+    public static void main (String [] args) {
+        
+        PropertyConfigurator.configure("D:\\4\\jEPlus_v1.6.0\\log4j.cfg");
+        
+        JEPlusConfig Config = new JEPlusConfig ();
+        Config.setRadianceBinDir("C:\\Program Files (x86)\\Radiance\\bin");
+        Config.setRadianceLibDir("C:\\Program Files (x86)\\Radiance\\lib");
+        
+//        runRtrace(
+//                Config, 
+//                "C:\\jess_test\\temp\\zyyz\\11718", 
+//                "-ab 4 -ad 1024 -aa .22 -ar 512 -as 512 -h+ -I+ -oov -fa",
+//                "dbmodel.oct",
+//                "trace.in",
+//                "trace.out",
+//                "trace.err"
+//                );
+        runRpict(
+                Config, 
+                "C:\\jess_test\\temp\\zyyz\\11720", 
+                /* "−vp 15.52623 22.5462 18.84981 −vd -1 −.5 -1 -ab 4 -ad 1024 -aa .22 -ar 512 -as 512", */
+                "-vtv -vp -.5 -5 1.15 -vd 0.5 5 0 -vh 45 -vv 45 -pa 1.0 -pj 0.02 -pd 0.0 -pm 0.0 -ps 1 -w+ -i- -bv+ -dt 0.050 -dc 0.50 -dj 0.0 -ds 0.250 -dr 1 -dp 512 -dv+ -st 0.150 -ab 4 -ar 128 -ad 1500 -as 500 -aa 0.15 -av 0.0 0.0 0.0 -aw 0 -lw 0.004 -ss 1.0 -lr -10 -u- -x 1024 -y 1024 -t 60",
+                "dbmodel.oct",
+                null,
+                "rpict.hdr",
+                "rpict.err",
+                true
+                );
+//        Config.setDaySimBinDir("C:\\jess_test\\EnergyPlus\\DaySim4\\bin");
+//        runGen_DC(
+//                Config, 
+//                "D:\\4\\JESS_Client_v2.2.0\\example_DS1", 
+//                "Daysim.txt",
+//                "trace.in",
+//                "console.out",
+//                "console.err"
+//                );
+//        runDaySim(
+//                Config, 
+//                "D:\\4\\JESS_Client_v2.2.0\\example_DS1", 
+//                "Daysim.txt",
+//                "trace.in",
+//                "console.out",
+//                "console.err"
+//                );
     }
 }
